# whaledev

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
data/: database.db  my_database.db
src/: bot.js  events.rs  main.rs  util.rs
src/commands/: eval.js  eval.rs  help.js  help.rs  leaderboard.rs  mod.rs  paste.js  paste.rs  ping.rs  pingchallenges.js  rank.rs
src/events/: bump.rs  guildMemberAdd.js  messageCreate.js  mod.rs  paste.rs  ready.js  xp.rs
src/utils/: logger.js  paste.js
